--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ h1 {
   text-align: center;
   font-size: 36px;
   color: #ffffff;
+
+  @media (max-width: 720px) {
+    font-size: 24px;
+  }
 }
 
 h2 {
@@ -27,6 +31,11 @@ main {
   display: flex;
   gap: 20px;
   margin-bottom: 30px;
+
+  @media (max-width: 720px) {
+    flex-direction: column;
+    margin-bottom: 5px;
+  }
 }
 
 .sessao-maior {
